@@ -20,3 +20,6 @@ Future
 
     - (__future__) Added DCWorkflow (through-the-web configurable
       workflows) to the core set of CMF products.
+
+    - Added 'listMetaTags' skin method, which filters the DublinCore
+      metadata into a form suitable for inclusion as <meta> tags.
